--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="icon" href="images/favicon.png" type="image/x-icon" />
     <!-- Theme tittle -->
-    <title>Pectro | Html Template</title> 
+    <title>GSC | Global For Specialty Chemicals </title> 
     
     <!-- Theme style CSS --> 
     <link href="css/style.css" rel="stylesheet">   
