--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="icon" href="images/favicon.png" type="image/x-icon" />
+    <link rel="icon" href="images/logo2.png" type="image/x-icon" />
     <!-- Theme tittle -->
     <title>GSC | Global For Specialty Chemicals </title> 
     
@@ -102,7 +102,12 @@
                                             <li><a class="dropdown-item" href="#">home detergents</a></li>
                                         </ul>    
                                     </li> 
-                                    <li><a href="industries-single.html">Solvents</a></li> 
+                                    <li class="dropdown"><a class="dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">Solvents</a>
+                                        <ul class="dropdown-menu">
+                                            <li><a class="dropdown-item" href="#">Mixed Solvents</a></li>
+                                            <li><a class="dropdown-item" href="#">Pure Solvents</a></li>
+                                        </ul>    
+                                    </li> 
                                     <li><a href="industries-single.html">thinners</a></li> 
                                     <li><a href="industries-single.html">special detergents</a></li> 
                                 </ul>
