--- a/index.html
+++ b/index.html
@@ -483,38 +483,54 @@
         <div class="container">
             <div class="row">
                 <!-- Fetures -->
-                <div class="col-lg-3 col-md-6 wow fadeIn">
+                <div class="col-lg-4 col-md-6 wow fadeIn">
                     <div class="fetures">
-                        <i class="fetures_i flaticon-architecture-and-city"></i> 
-                        <a href="industries-single.html" class="heding">Oil &amp; Gas Energy</a>
-                        <p>Petroleum refiners, fuel transport and end-user sales at gas stations. the gas industry, including natural gas extraction,</p>
+                        <img  class="w-25" src="images/industry-alt.svg" alt="">
+                        <a href="industries-single.html" class="heding">Industrial Detergents</a>
+                        <p>Heavy-duty cleaning solutions for industrial environments, designed to remove grease and dirt from machinery and equipment.</p>
                         <a href="industries-single.html">Go Continues <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <!-- Fetures -->
-                <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.3s">
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="0.3s">
                     <div class="fetures">
-                        <i class="fetures_i flaticon-pollution"></i> 
-                        <a href="industries-single.html" class="heding">Manufacturing Factories</a>
-                        <p>A factory or manufacturing plant is an industrial site, usually consisting of buildings and machinery, </p>
+                        <img class="w-25" src="images/2.svg" alt="">
+                        <a href="industries-single.html" class="heding">Home Detergents</a>
+                        <p>Our eco-friendly detergents provide powerful, safe cleaning for every corner of your home, ensuring hygiene and protecting your family.</p>
                         <a href="industries-single.html">Go Continues <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <!-- Fetures -->
-                <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.6s">
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="0.6s">
                     <div class="fetures">
-                        <i class="fetures_i flaticon-factory"></i> 
-                        <a href="industries-single.html" class="heding">Industrial Construction</a>
-                        <p>The work can be as varied as working on a bridge, a dam or an oil refinery. Industrial construction </p>
+                        <img class="w-25" src="images/flask.svg" alt="">
+                        <a href="industries-single.html" class="heding">Mixed Solvents  </a>
+                        <p>Custom-blended solvents tailored for industrial applications like coatings, adhesives, and printing, ensuring efficiency and versatility.</p>
                         <a href="industries-single.html">Go Continues <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <!-- Fetures -->
-                <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="1.4s">
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="1.4s">
                     <div class="fetures">
-                        <i class="fetures_i flaticon-green-energy"></i> 
-                        <a href="industries-single.html" class="heding">Mechanical Engineering</a>
-                        <p>Petroleum refiners, fuel transport and end-user sales at gas stations. the gas industry, including natural gas extraction,</p>
+                        <img class="w-30" src="images/6.svg" alt="">
+                        <a href="industries-single.html" class="heding">Pure Solvents </a>
+                        <p>High-purity chemical solvents for specialized industries such as pharmaceuticals and electronics, offering precise performance.</p>
+                        <a href="industries-single.html">Go Continues <i class="fa fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="1.4s">
+                    <div class="fetures">
+                        <img class="w-25" src="images/3.svg" alt="">
+                        <a href="industries-single.html" class="heding">Thinners</a>
+                        <p>Formulated to reduce the viscosity of paints and coatings, our thinners ensure smooth application and consistent results.</p>
+                        <a href="industries-single.html">Go Continues <i class="fa fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="1.4s">
+                    <div class="fetures">
+                        <img class="w-25" src="images/6.svg" alt="">
+                        <a href="industries-single.html" class="heding">Special Detergents</a>
+                        <p>Tailor-made detergents designed to meet specific industrial cleaning needs, developed in collaboration with our clients.</p>
                         <a href="industries-single.html">Go Continues <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
