--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
             <div class="col-lg-7 welcome_content_aera">
                <div class="welcome_content"> 
                     <h2>Welcome to Global Specialty Chemicals – Leading Industrial Chemical Solutions</h2>
-                    <p>Manufacturing has come a long way in just a few short years. We're helping businesses evolve and thrive in a changing world, where disruptive technologies and talent challenges are taking centre stage. Our industrial company delivers products and services to many countries of the globe, Our industrial company has been fulfilling public projects for decades, </p>
+                    <p class="pt-3">Manufacturing has come a long way in just a few short years. We're helping businesses evolve and thrive in a changing world, where disruptive technologies and talent challenges are taking centre stage. Our industrial company delivers products and services to many countries of the globe, Our industrial company has been fulfilling public projects for decades, </p>
                     <h4><i class="flaticon-factory"></i>Our Focus</h4>
                     <p class="factory_p pb-2">At Global Specialty Chemicals, we’re proud to support businesses with products that enhance operational efficiency and safety. We serve industries across Egypt and beyond, ensuring reliability and quality in every solution we provide.</p>
                     <h4><i class="flaticon-factory"></i>OUR MISSION</h4>
@@ -600,7 +600,7 @@
         <div class="container"> 
             <div class="footer_inner row"> 
                 <div class="col-lg-4 col-md-6 footer_logo wow fadeIn">
-                    <a href="index.html"><img src="images/logo.png" alt=""></a> 
+                    <a  href="index.html"><img class="w-20" src="images/logo1.png" alt=""><a class="text-dark" href="">Global For Specialty Chemicals</a> </a> 
                     <p>Over 21 years of experience we’ll ensure you always get the best guidance. </p>
                     <h4>CUSTOMER SATISFACTION</h4>
                     <span class="persent">100%</span>
