--- a/blog-2.html
+++ b/blog-2.html
@@ -25,14 +25,14 @@
     <div class="header_top_area"> 
         <div class="container">  
             <div class="header_top_inner row"> 
-                <div class="col-lg-6"> 
+                <div class="col-md-4"> 
                     <ul class="contact_number">
-                        <li><a href="#"><i class="flaticon-phone-call"></i>(+88) 01912704287</a></li> 
+                        <li><a href="#" type="tel"><i class="flaticon-phone-call"></i>(+20)223426311</a></li> 
                     </ul>
                 </div> 
-                <div class="col-lg-6"> 
+                <div class="col-md-8"> 
                     <ul class="lng_time"> 
-                        <li><a href="#">Time : Monday-Friday 09am-5pm</a></li>
+                        <li><a href="#">Time : Sunday-Thursday 09am-5pm</a></li>
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" >ENG</a>
                             <ul class="dropdown-menu">
@@ -51,24 +51,24 @@
     <div class="header_logo_area"> 
         <div class="container">  
             <div class="header_logo_inner row">
-                <div class="col-lg-3"><a class="navbar-brand" href="index.html"><img src="images/logo.png" alt=""></a></div>
+                <div class="col-lg-3"><a class="navbar-brand" href="index.html"><img src="images/new logo final.png" alt=""></a></div>
                 <div class="right_info col-lg-9 row"> 
                     <div class="media col-md-4 col-sm-6">
                         <i class="flaticon-placeholder"></i>
                         <div class="media-body">
-                            <h4>Factory Office</h4>
-                            <h6>236 advice the good, CA</h6>
+                            <h4>Office</h4>
+                            <h6> 4 El Frados Complex, Nasr City, Cairo, Egypt.</h6>
                         </div>
                     </div>
                     <div class="media col-md-4 col-sm-6">
                         <i class="flaticon-mail"></i>
                         <div class="media-body">
                             <h4>Email</h4>
-                            <h6>infous@gmail.com</h6>
+                            <h6>info@globalchem-eg.com</h6>
                         </div>
                     </div>
                     <ul class="header_social col-md-4 col-sm-6">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.facebook.com/GSCEGY" target="_blank" title="Facebook Page"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="#"><i class="fa fa-pinterest-p"></i></a></li>
                         <li><a href="#"><i class="fa fa-google"></i></a></li>
@@ -78,7 +78,7 @@
             </div>
         </div> 
     </div>
-    <!-- Header Logo Area -->   
+    <!-- Header Logo Area -->  
 
     <!-- Header Area -->
     <header class="main_header_area"> 
@@ -92,54 +92,24 @@
 
                     <div class="collapse navbar-collapse navbar_supported">
                         <ul class="navbar-nav"> 
-                            <li><a class="nav-link active" href="index.html">Home</a></li>    
+                            <li><a class="nav-link active" href="index.html">Home</a></li>  
                             <li class="dropdown">
-                                <a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown" aria-expanded="false">Industries<i class="fa fa-caret-down"></i></a>
+                                <a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown" aria-expanded="false">Products<i class="fa fa-caret-down"></i></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="industries.html">Industries</a></li> 
-                                    <li><a href="industries-2.html">Industries v2</a></li> 
-                                    <li><a href="industries-single.html">Oil &amp; Gas Energy</a></li> 
-                                    <li><a href="industries-single.html">Bridge Construction</a></li> 
-                                    <li><a href="industries-single.html">Material Handling</a></li> 
-                                    <li><a href="industries-single.html">Mechanical Engineering</a></li> 
-                                    <li><a href="industries-single.html">Automotive </a></li> 
-                                </ul>
-                            </li>  
-                            <li class="dropdown">
-                                <a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown" aria-expanded="false">Case Studies<i class="fa fa-caret-down"></i></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="case-studies.html">Case Studies v1</a></li> 
-                                    <li><a href="case-studies-2.html">Case Studies v2</a></li> 
-                                    <li><a href="case-studies-single.html">Electronic Materials</a></li> 
-                                    <li><a href="case-studies-single.html"> Digital Transformation</a></li>  
-                                    <li><a href="case-studies-single.html">Power Systems</a></li>  
-                                    <li><a href="case-studies-single.html">ECO Power System</a></li>  
-                                    <li><a href="case-studies-single.html">Industries Green energy</a></li>  
-                                </ul>
-                            </li>  
-                            <li class="dropdown">
-                                <a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown" aria-expanded="false">Pages<i class="fa fa-caret-down"></i></a>
-                                <ul class="dropdown-menu">  
-                                    <li><a href="about.html">About</a></li>
-                                    <li class="dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Submenu</a>
-                                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <li><a href="about.html">Submenu Version 1</a></li> 
-                                            <li><a href="about-2.html">Submenu Version 2</a></li> 
-                                        </ul>
+                                    <li class="dropdown"><a class="dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">Detergents</a>
+                                        <ul class="dropdown-menu">
+                                            <li><a class="dropdown-item" href="#">Industrial Detergents</a></li>
+                                            <li><a class="dropdown-item" href="#">Household Detergants</a></li>
+                                        </ul>    
                                     </li> 
-                                    <li><a href="team.html">Team</a></li> 
-                                    <li><a href="faq.html">faq</a></li>  
+                                    <li><a class="nav-link" href="">Solvents</a>
+                                    </li> 
+                                    <li><a href="industries-single.html">Thinners</a></li> 
+                                    <li><a href="industries-single.html">Special detergents</a></li> 
+                                    <li><a href="industries-single.html">Oilfield chemicals</a></li> 
                                 </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown" aria-expanded="false">BLog<i class="fa fa-caret-down"></i></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="blog.html">Blog</a></li>  
-                                    <li><a href="blog-2.html">Blog v2</a></li>  
-                                    <li><a href="blog-single.html">Blog details </a></li> 
-                                </ul>
-                            </li> 
+                            </li>  
+                            <li><a class="nav-link" href="contact.html">About Us</a></li>  
                             <li><a class="nav-link" href="contact.html">Contact us</a></li>  
                         </ul>  
                     </div>
@@ -150,7 +120,7 @@
            </div>
         </div>
     </header>
-    <!-- Header Area -->  
+    <!-- Header Area -->    
     
     <!-- Banner Area --> 
     <section class="banner_area">
