--- a/contact.html
+++ b/contact.html
@@ -255,7 +255,7 @@
                     <p>Over 21 years of experience we’ll ensure you always get the best guidance. </p>
                     <h4>CUSTOMER SATISFACTION</h4>
                     <span class="persent">100%</span>
-                    <a href="#" class="contact_btn"><i class="fa fa-arrow-right"></i>Contact us</a>
+                    <a href="#contact.html" class="contact_btn"><i class="fa fa-arrow-right"></i>Contact us</a>
                     <ul class="footer_social"> 
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
