--- a/index.html
+++ b/index.html
@@ -51,20 +51,18 @@
     <div class="header_logo_area"> 
         <div class="container">  
             <div class="header_logo_inner row">
-                <div class="col-lg-3"><a class="navbar-brand" href="index.html"><img src="images/new logo final.png" alt=""></a></div>
+                <div class="col-lg-3"><a class="navbar-brand" href="index.html"><img src="images/GSC22sds.png" alt=""></a></div>
                 <div class="right_info col-lg-9 row"> 
-                    <div class="media col-md-4 col-sm-6">
+                    <div class="media col-md-4 col-sm-6 align-items-center">
                         <i class="flaticon-placeholder"></i>
                         <div class="media-body">
-                            <h4>Office</h4>
                             <h6> 4 El Frados Complex, Nasr City, Cairo, Egypt.</h6>
                         </div>
                     </div>
-                    <div class="media col-md-4 col-sm-6">
+                    <div class="media col-md-4 col-sm-6 align-items-center">
                         <i class="flaticon-mail"></i>
-                        <div class="media-body">
-                            <h4>Email</h4>
-                            <h6>info@globalchem-eg.com</h6>
+                        <div class="media-body pt-0">
+                            <h6 class="pt-0">info@globalchem-eg.com</h6>
                         </div>
                     </div>
                     <ul class="header_social col-md-4 col-sm-6">
@@ -98,21 +96,18 @@
                                 <ul class="dropdown-menu">
                                     <li class="dropdown"><a class="dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">Detergents</a>
                                         <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="#">industrial detergents</a></li>
-                                            <li><a class="dropdown-item" href="#">home detergents</a></li>
+                                            <li><a class="dropdown-item" href="#">Industrial Detergents</a></li>
+                                            <li><a class="dropdown-item" href="industries-2.html">Household Detergents</a></li>
                                         </ul>    
                                     </li> 
-                                    <li class="dropdown"><a class="dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">Solvents</a>
-                                        <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="#">Mixed Solvents</a></li>
-                                            <li><a class="dropdown-item" href="#">Pure Solvents</a></li>
-                                        </ul>    
+                                    <li><a class="nav-link" href="">Solvents</a>
                                     </li> 
-                                    <li><a href="industries-single.html">thinners</a></li> 
-                                    <li><a href="industries-single.html">special detergents</a></li> 
+                                    <li><a href="#">Thinners</a></li> 
+                                    <li><a href="#">Special Detergents</a></li> 
+                                    <li><a href="#">Oilfield Chemicals</a></li> 
                                 </ul>
                             </li>  
-                            <li><a class="nav-link" href="contact.html">About Us</a></li>  
+                            <li><a class="nav-link" href="about.html">About Us</a></li>  
                             <li><a class="nav-link" href="contact.html">Contact us</a></li>  
                         </ul>  
                     </div>
@@ -140,9 +135,9 @@
                         data-hoffset="['0','0','0','0']" 
                         data-y="['top','top','top','top']" 
                         data-voffset="['285','250','150','150']" 
-                        data-fontsize="['45','45','45','25']" 
+                        data-fontsize="['45','45','40','20']" 
                         data-lineheight="['80','80','55','35']" 
-                        data-width="['none','none','none','240']" 
+                        data-width="['none','none','none','400']" 
                         data-height="none" 
                         data-whitespace="['nowrap','nowrap','nowrap','normal']" 
                         data-transform_idle="o:1;"  
@@ -356,7 +351,7 @@
                         data-voffset="['285','250','150','150']" 
                         data-fontsize="['45','45','30','30']" 
                         data-lineheight="['80','80','55','35']" 
-                        data-width="['none','none','none','240']" 
+                        data-width="['none','none','none','500']" 
                         data-height="none" 
                         data-whitespace="['nowrap','nowrap','nowrap','normal']" 
                         data-transform_idle="o:1;"  
@@ -392,7 +387,7 @@
                         style="z-index: 7; white-space: nowrap; text-align:left;">
                     </div>
                     <!-- LAYER NR. 3 -->  
-                     <div class="tp-caption slider_sm_heding text-align-start text-left" 
+                     <div class="tp-caption slider_sm_heding text-align-start text-left " 
                         id="slide-3-layer-3" 
                         data-x="['left','left','left','left']"  
                         data-hoffset="['0','0','0','15']" 
@@ -486,18 +481,18 @@
                 <div class="col-lg-4 col-md-6 wow fadeIn">
                     <div class="fetures">
                         <img  class="w-25" src="images/industry-alt.svg" alt="">
-                        <a href="industries-single.html" class="heding">Industrial Detergents</a>
+                        <a href="industries-2.html" class="heding">Industrial Detergents</a>
                         <p>Heavy-duty cleaning solutions for industrial environments, designed to remove grease and dirt from machinery and equipment.</p>
-                        <a href="industries-single.html">Go Continues <i class="fa fa-arrow-right"></i></a>
+                        <a href="industries-2.html">Go Continues <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <!-- Fetures -->
                 <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="0.3s">
                     <div class="fetures">
                         <img class="w-25" src="images/2.svg" alt="">
-                        <a href="industries-single.html" class="heding">Home Detergents</a>
+                        <a href="industries-2.html" class="heding">Home Detergents</a>
                         <p>Our eco-friendly detergents provide powerful, safe cleaning for every corner of your home, ensuring hygiene and protecting your family.</p>
-                        <a href="industries-single.html">Go Continues <i class="fa fa-arrow-right"></i></a>
+                        <a href="industries-2.html">Go Continues <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <!-- Fetures -->
@@ -518,7 +513,7 @@
                         <a href="industries-single.html">Go Continues <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="1.4s">
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="1.1s">
                     <div class="fetures">
                         <img class="w-25" src="images/3.svg" alt="">
                         <a href="industries-single.html" class="heding">Thinners</a>
@@ -526,7 +521,7 @@
                         <a href="industries-single.html">Go Continues <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="1.4s">
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="0.9s">
                     <div class="fetures">
                         <img class="w-25" src="images/6.svg" alt="">
                         <a href="industries-single.html" class="heding">Special Detergents</a>
@@ -600,7 +595,7 @@
         <div class="container"> 
             <div class="footer_inner row"> 
                 <div class="col-lg-4 col-md-6 footer_logo wow fadeIn">
-                    <a  href="index.html"><img class="w-20" src="images/logo1.png" alt=""><a class="text-dark" href="">Global For Specialty Chemicals</a> </a> 
+                    <a href="index.html"><img class="w-25" src="images/logo1.png" alt=""></a> 
                     <p>Over 21 years of experience we’ll ensure you always get the best guidance. </p>
                     <h4>CUSTOMER SATISFACTION</h4>
                     <span class="persent">100%</span>
@@ -614,37 +609,34 @@
                     </ul>
                 </div>
                 <div class="footer_widget col-lg-3 col-sm-6 wow fadeIn" data-wow-delay="0.3s">
-                    <h4>Company</h4>
+                    <h4>GSC</h4>
                     <ul class="footer_nav">  
-                        <li><a href="#">Factory</a></li> 
-                        <li><a href="#">Site Map</a></li> 
-                        <li><a href="#">Accessibility</a></li> 
-                        <li><a href="#">Company</a></li> 
-                        <li><a href="#">About</a></li> 
-                        <li><a href="#">Approach</a></li> 
+                        <li><a href="#">Home</a></li> 
+                        <li><a href="#">About Us</a></li> 
+                        <li><a href="#">Contact us</a></li> 
                     </ul>
                 </div>  
                 <div class="footer_widget fw_2 col-lg-2 col-sm-6 wow fadeIn" data-wow-delay="0.6s">
-                    <h4>Solutions</h4> 
+                    <h4>Products</h4> 
                     <ul class="footer_nav"> 
-                        <li><a href="#">Electronic Materials</a></li>   
-                        <li><a href="#">Gifts & Apparel</a></li>   
-                        <li><a href="#">Auto Parts </a></li>   
-                        <li><a href="#">Heavy Equipment</a></li>   
-                        <li><a href="#">Machine Tool</a></li>   
+                        <li><a href="#">Detergents</a></li>   
+                        <li><a href="#">Solvents</a></li>   
+                        <li><a href="#">Thinners </a></li>   
+                        <li><a href="#">Special Detergents</a></li>   
+                        <li><a href="#">Oilfield Chemicals</a></li>   
                         <li><a href="#">Marine</a></li>   
                     </ul>
                 </div> 
                 <div class="footer_widget fw_3 col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.9s">
-                    <h4> Our Services</h4>  
+                    <h4> Detergents</h4>  
                     <ul class="footer_nav">     
-                        <li><a href="#">Mechanical Engineering</a></li>   
-                        <li><a href="#">Industrial Construction</a></li>   
-                        <li><a href="#">Bridge Construction</a></li>   
+                        <li><a href="#">Industrial Detergents</a></li>   
+                        <li><a href="#">Household Detergents</a></li>   
+                        <!-- <li><a href="#">Bridge Construction</a></li>   
                         <li><a href="#">Oil & Gas Energy</a></li>   
                         <li><a href="#">Auto Parts</a></li>   
                         <li><a href="#">Power Systems</a></li>   
-                        <li><a href="#">Building Management</a></li>   
+                        <li><a href="#">Building Management</a></li>    -->
                     </ul>
                 </div>  
             </div>
