--- a/industries-2.html
+++ b/industries-2.html
@@ -51,7 +51,7 @@
     <div class="header_logo_area"> 
         <div class="container">  
             <div class="header_logo_inner row">
-                <div class="col-lg-3"><a class="navbar-brand" href="index.html"><img src="images/GSC22sds.png" alt=""></a></div>
+                <div class="col-lg-3"><a class="navbar-brand" href="index.html"><img src="images/logo11.png" alt=""></a></div>
                 <div class="right_info col-lg-9 row"> 
                     <div class="media col-md-4 col-sm-6 align-items-center">
                         <i class="flaticon-placeholder"></i>
