--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="icon" href="images/logo2.png" type="image/x-icon" />
+    <link rel="icon" href="images/GSC.png" type="image/x-icon" />
     <!-- Theme tittle -->
     <title>GSC | Global For Specialty Chemicals </title> 
     
@@ -51,7 +51,7 @@
     <div class="header_logo_area"> 
         <div class="container">  
             <div class="header_logo_inner row">
-                <div class="col-lg-3"><a class="navbar-brand" href="index.html"><img src="images/logo11.png" alt=""></a></div>
+                <div class="col-lg-3"><a class="navbar-brand" href="index.html"><img src="images/GSC.png" alt=""></a></div>
                 <div class="right_info col-lg-9 row"> 
                     <div class="media col-md-4 col-sm-6 align-items-center">
                         <i class="flaticon-placeholder"></i>
@@ -595,7 +595,7 @@
         <div class="container"> 
             <div class="footer_inner row"> 
                 <div class="col-lg-4 col-md-6 footer_logo wow fadeIn">
-                    <a href="index.html"><img class="w-25" src="images/logo1.png" alt=""></a> 
+                    <a href="index.html"><img class="w-25" src="images/GSC.png" alt=""></a> 
                     <p>Over 21 years of experience we’ll ensure you always get the best guidance. </p>
                     <h4>CUSTOMER SATISFACTION</h4>
                     <span class="persent">100%</span>
