--- a/about.html
+++ b/about.html
@@ -164,12 +164,12 @@
                 <div class="about_company">
                     <h4>About Us</h4>
                     <h2>Established in 2012, Global Specialty Chemicals (GSC) has become a leading supplier of industrial chemical solutions</h2>
-                    <p>Our software focuses on empowering decision makers with real-time visibility and deep operational intelligence. It supports insightful decisions with real-time quality and execution information. And it helps balance plant production automatically with product quality and profitability.</p>
-                    <a href="#" class="theme_btn">Growth Goals</a>
+                    <p> proudly serving a broad range of sectors in Egypt and across the region. Over the years, we have earned a reputation for delivering exceptional quality, reliability, and innovation in products such as detergents, oil & grease removers, solvents, thinners, oilfield chemicals, plastics, and printing solvents</p>
+                    <a href="/contact.html" class="theme_btn">Get Quote</a>
                 </div>
             </div>
             <div class="col-lg-6 company_img">
-                <img src="images/about-company.png" alt="">
+                <img src="images/about-b1.jpg" alt="">
             </div>
         </div>
     </section>
@@ -180,17 +180,19 @@
         <div class="row">
             <div class="col-lg-5">
                <div class="welcome_img"> 
-                    <img src="images/welcome_img.jpg" alt=""> 
+                    <img src="images/DARK.jpg" alt=""> 
                </div>
             </div>
             <div class="col-lg-7 welcome_content_aera">
                <div class="welcome_content"> 
-                    <h2>Welcome to Our Industrial Manufacturing Solutions</h2>
-                    <p class="sub_p">Manufacturing has come a long way in just a few short years. We're helping businesses evolve and thrive <br> in a changing world</p>
-                    <p>Manufacturing has come a long way in just a few short years. We're helping businesses evolve and thrive in a changing world, where disruptive technologies and talent challenges are taking centre stage. Our industrial company delivers products and services to many countries of the globe, Our industrial company has been fulfilling public projects for decades, </p>
-                    <h4><i class="flaticon-factory"></i>OUR MISSION</h4>
-                    <p class="factory_p">Pactry creates value by stimulating to profitable business development throughout Norway. Our programmes and services are intended to create more successful entrepreneurs, more enterprises with capacity for growth and more innovative business clusters. </p>
-                    <a href="#">Read More details <i class="flaticon-next"></i></a>
+                    <h2>Welcome at GSC, we are driven by a commitment to excellence, partnering with industries that rely on high-performance chemical solutions to enhance their operations.</h2>
+                    <p class="sub_p">Whether it’s in the oil and gas sector, manufacturing, or printing, our products are engineered to meet the rigorous demands of modern industries. Our in-depth knowledge and experience allow us to develop solutions tailored to our clients' specific needs, ensuring their processes run smoothly and efficiently.</p>
+                    <h2>Why Choose GSC?</h2>
+                    <p>We understand that our customers depend on the quality and reliability of our products. That’s why we are committed to continuous research and development, ensuring that we stay at the forefront of innovation in the chemical industry. Our products are not only designed to perform but are also developed with a focus on safety and sustainability—minimizing environmental impact while maximizing efficiency. </p>
+                    <h4><img class="w-10" src="images/asset3.svg" alt=""> OUR MISSION</h4>
+                    <p class="factory_p">To provide safe, sustainable, and innovative chemical solutions that drive operational success for our clients across diverse industries.</p>
+                    <h4><img class="w-10" src="images/a.svg" alt=""> OUR VISION</h4>
+                    <p>To lead the Egyptian and regional markets as a trusted provider of advanced industrial chemicals, contributing to the growth and sustainability of the industries we serve.</p>
                </div>
             </div>
         </div>
@@ -319,11 +321,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mail_info wow fadeInLeft">
-                    <a href="#"><i class="flaticon-mail"></i>Pectryhelp@gmail.com</a>
+                    <a href="#"><i class="flaticon-mail"></i>info@globalchem-eg.com</a>
                 </div> 
-                <a href="#" class="col-lg-4 contact_no">(+88) 01912704287</a> 
+                <a href="#" class="col-lg-4 contact_no">(+20)223426311</a> 
                 <div class="col-lg-4 location_info wow fadeInRight"> 
-                    <h4><i class="flaticon-placeholder"></i>143, New York, NY 10018</h4>
+                    <h4><i class="flaticon-placeholder"></i>4 El Frados Complex, Nasr City, Cairo, Egypt.</h4>
                 </div>
             </div>
         </div>
@@ -335,7 +337,7 @@
         <div class="container"> 
             <div class="footer_inner row"> 
                 <div class="col-lg-4 col-md-6 footer_logo wow fadeIn">
-                    <a href="index.html"><img class="w-25" src="images/GSC.png" alt=""></a> 
+                    <a href="index.html"><img class="w-30" src="images/LOGO-BIG1.png" alt=""></a> 
                     <p>Over 21 years of experience we’ll ensure you always get the best guidance. </p>
                     <h4>CUSTOMER SATISFACTION</h4>
                     <span class="persent">100%</span>
