--- a/blog-single.html
+++ b/blog-single.html
@@ -284,15 +284,15 @@
     <!-- End Latest Post Area -->  
      
     <!-- Contact Info Area -->  
-    <section class="contact_inf_area">
+    <section class="contact_inf_area cia_2">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mail_info wow fadeInLeft">
-                    <a href="#"><i class="flaticon-mail"></i>Pectryhelp@gmail.com</a>
+                    <a href="#"><i class="flaticon-mail"></i>info@globalchem-eg.com</a>
                 </div> 
-                <a href="#" class="col-lg-4 contact_no">(+88) 01912704287</a> 
+                <a href="#" class="col-lg-4 contact_no">(+20)223426311</a> 
                 <div class="col-lg-4 location_info wow fadeInRight"> 
-                    <h4><i class="flaticon-placeholder"></i>143, New York, NY 10018</h4>
+                    <h4><i class="flaticon-placeholder"></i>4 El Frados Complex, Nasr City, Cairo, Egypt.</h4>
                 </div>
             </div>
         </div>
@@ -304,7 +304,7 @@
         <div class="container"> 
             <div class="footer_inner row"> 
                 <div class="col-lg-4 col-md-6 footer_logo wow fadeIn">
-                    <a href="index.html"><img src="images/GSC.png" alt=""></a> 
+                    <a href="index.html"><img class="w-30" src="images/LOGO-BIG1.png" alt=""></a> 
                     <p>Over 21 years of experience we’ll ensure you always get the best guidance. </p>
                     <h4>CUSTOMER SATISFACTION</h4>
                     <span class="persent">100%</span>
@@ -318,37 +318,34 @@
                     </ul>
                 </div>
                 <div class="footer_widget col-lg-3 col-sm-6 wow fadeIn" data-wow-delay="0.3s">
-                    <h4>Company</h4>
+                    <h4>GSC</h4>
                     <ul class="footer_nav">  
-                        <li><a href="#">Factory</a></li> 
-                        <li><a href="#">Site Map</a></li> 
-                        <li><a href="#">Accessibility</a></li> 
-                        <li><a href="#">Company</a></li> 
-                        <li><a href="#">About</a></li> 
-                        <li><a href="#">Approach</a></li> 
+                        <li><a href="#">Home</a></li> 
+                        <li><a href="#">About Us</a></li> 
+                        <li><a href="#">Contact us</a></li> 
                     </ul>
                 </div>  
                 <div class="footer_widget fw_2 col-lg-2 col-sm-6 wow fadeIn" data-wow-delay="0.6s">
-                    <h4>Solutions</h4> 
+                    <h4>Products</h4> 
                     <ul class="footer_nav"> 
-                        <li><a href="#">Electronic Materials</a></li>   
-                        <li><a href="#">Gifts & Apparel</a></li>   
-                        <li><a href="#">Auto Parts </a></li>   
-                        <li><a href="#">Heavy Equipment</a></li>   
-                        <li><a href="#">Machine Tool</a></li>   
+                        <li><a href="#">Detergents</a></li>   
+                        <li><a href="#">Solvents</a></li>   
+                        <li><a href="#">Thinners </a></li>   
+                        <li><a href="#">Special Detergents</a></li>   
+                        <li><a href="#">Oilfield Chemicals</a></li>   
                         <li><a href="#">Marine</a></li>   
                     </ul>
                 </div> 
                 <div class="footer_widget fw_3 col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.9s">
-                    <h4> Our Services</h4>  
+                    <h4> Detergents</h4>  
                     <ul class="footer_nav">     
-                        <li><a href="#">Mechanical Engineering</a></li>   
-                        <li><a href="#">Industrial Construction</a></li>   
-                        <li><a href="#">Bridge Construction</a></li>   
+                        <li><a href="#">Industrial Detergents</a></li>   
+                        <li><a href="#">Household Detergents</a></li>   
+                        <!-- <li><a href="#">Bridge Construction</a></li>   
                         <li><a href="#">Oil & Gas Energy</a></li>   
                         <li><a href="#">Auto Parts</a></li>   
                         <li><a href="#">Power Systems</a></li>   
-                        <li><a href="#">Building Management</a></li>   
+                        <li><a href="#">Building Management</a></li>    -->
                     </ul>
                 </div>  
             </div>
