--- a/contact.html
+++ b/contact.html
@@ -27,12 +27,12 @@
             <div class="header_top_inner row"> 
                 <div class="col-md-4"> 
                     <ul class="contact_number">
-                        <li><a href="#"><i class="flaticon-phone-call"></i>(+88) 01912704287</a></li> 
+                        <li><a href="#" type="tel"><i class="flaticon-phone-call"></i>(+20)223426311</a></li> 
                     </ul>
                 </div> 
                 <div class="col-md-8"> 
                     <ul class="lng_time"> 
-                        <li><a href="#">Time : Monday-Friday 09am-5pm</a></li>
+                        <li><a href="#">Time : Sunday-Thursday 09am-5pm</a></li>
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" >ENG</a>
                             <ul class="dropdown-menu">
@@ -53,22 +53,20 @@
             <div class="header_logo_inner row">
                 <div class="col-lg-3"><a class="navbar-brand" href="index.html"><img src="images/GSC.png" alt=""></a></div>
                 <div class="right_info col-lg-9 row"> 
-                    <div class="media col-md-4 col-sm-6">
+                    <div class="media col-md-4 col-sm-6 align-items-center">
                         <i class="flaticon-placeholder"></i>
                         <div class="media-body">
-                            <h4>Factory Office</h4>
-                            <h6>236 advice the good, CA</h6>
+                            <h6> 4 El Frados Complex, Nasr City, Cairo, Egypt.</h6>
                         </div>
                     </div>
-                    <div class="media col-md-4 col-sm-6">
+                    <div class="media col-md-4 col-sm-6 align-items-center">
                         <i class="flaticon-mail"></i>
-                        <div class="media-body">
-                            <h4>Email</h4>
-                            <h6>infous@gmail.com</h6>
+                        <div class="media-body pt-0">
+                            <h6 class="pt-0">info@globalchem-eg.com</h6>
                         </div>
                     </div>
                     <ul class="header_social col-md-4 col-sm-6">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.facebook.com/GSCEGY" target="_blank" title="Facebook Page"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="#"><i class="fa fa-pinterest-p"></i></a></li>
                         <li><a href="#"><i class="fa fa-google"></i></a></li>
@@ -78,7 +76,7 @@
             </div>
         </div> 
     </div>
-    <!-- Header Logo Area -->   
+    <!-- Header Logo Area -->  
 
     <!-- Header Area -->
     <header class="main_header_area"> 
@@ -92,54 +90,24 @@
 
                     <div class="collapse navbar-collapse navbar_supported">
                         <ul class="navbar-nav"> 
-                            <li><a class="nav-link active" href="index.html">Home</a></li>    
+                            <li><a class="nav-link active" href="index.html">Home</a></li>  
                             <li class="dropdown">
-                                <a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown" aria-expanded="false">Industries<i class="fa fa-caret-down"></i></a>
+                                <a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown" aria-expanded="false">Products<i class="fa fa-caret-down"></i></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="industries.html">Industries</a></li> 
-                                    <li><a href="industries-2.html">Industries v2</a></li> 
-                                    <li><a href="industries-single.html">Oil &amp; Gas Energy</a></li> 
-                                    <li><a href="industries-single.html">Bridge Construction</a></li> 
-                                    <li><a href="industries-single.html">Material Handling</a></li> 
-                                    <li><a href="industries-single.html">Mechanical Engineering</a></li> 
-                                    <li><a href="industries-single.html">Automotive </a></li> 
-                                </ul>
-                            </li>  
-                            <li class="dropdown">
-                                <a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown" aria-expanded="false">Case Studies<i class="fa fa-caret-down"></i></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="case-studies.html">Case Studies v1</a></li> 
-                                    <li><a href="case-studies-2.html">Case Studies v2</a></li> 
-                                    <li><a href="case-studies-single.html">Electronic Materials</a></li> 
-                                    <li><a href="case-studies-single.html"> Digital Transformation</a></li>  
-                                    <li><a href="case-studies-single.html">Power Systems</a></li>  
-                                    <li><a href="case-studies-single.html">ECO Power System</a></li>  
-                                    <li><a href="case-studies-single.html">Industries Green energy</a></li>  
-                                </ul>
-                            </li>  
-                            <li class="dropdown">
-                                <a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown" aria-expanded="false">Pages<i class="fa fa-caret-down"></i></a>
-                                <ul class="dropdown-menu">  
-                                    <li><a href="about.html">About</a></li>
-                                    <li class="dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Submenu</a>
-                                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <li><a href="about.html">Submenu Version 1</a></li> 
-                                            <li><a href="about-2.html">Submenu Version 2</a></li> 
-                                        </ul>
+                                    <li class="dropdown"><a class="dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">Detergents</a>
+                                        <ul class="dropdown-menu">
+                                            <li><a class="dropdown-item" href="#">Industrial Detergents</a></li>
+                                            <li><a class="dropdown-item" href="industries-2.html">Household Detergents</a></li>
+                                        </ul>    
                                     </li> 
-                                    <li><a href="team.html">Team</a></li> 
-                                    <li><a href="faq.html">faq</a></li>  
+                                    <li><a class="nav-link" href="">Solvents</a>
+                                    </li> 
+                                    <li><a href="#">Thinners</a></li> 
+                                    <li><a href="#">Special Detergents</a></li> 
+                                    <li><a href="#">Oilfield Chemicals</a></li> 
                                 </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown" aria-expanded="false">BLog<i class="fa fa-caret-down"></i></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="blog.html">Blog</a></li>  
-                                    <li><a href="blog-2.html">Blog v2</a></li>  
-                                    <li><a href="blog-single.html">Blog details </a></li> 
-                                </ul>
-                            </li> 
+                            </li>  
+                            <li><a class="nav-link" href="about.html">About Us</a></li>  
                             <li><a class="nav-link" href="contact.html">Contact us</a></li>  
                         </ul>  
                     </div>
@@ -235,11 +203,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mail_info wow fadeInLeft">
-                    <a href="#"><i class="flaticon-mail"></i>Pectryhelp@gmail.com</a>
+                    <a href="#"><i class="flaticon-mail"></i>info@globalchem-eg.com</a>
                 </div> 
-                <a href="#" class="col-lg-4 contact_no">(+88) 01912704287</a> 
+                <a href="#" class="col-lg-4 contact_no">(+20)223426311</a> 
                 <div class="col-lg-4 location_info wow fadeInRight"> 
-                    <h4><i class="flaticon-placeholder"></i>143, New York, NY 10018</h4>
+                    <h4><i class="flaticon-placeholder"></i>4 El Frados Complex, Nasr City, Cairo, Egypt.</h4>
                 </div>
             </div>
         </div>
@@ -251,11 +219,11 @@
         <div class="container"> 
             <div class="footer_inner row"> 
                 <div class="col-lg-4 col-md-6 footer_logo wow fadeIn">
-                    <a href="index.html"><img src="images/GSC.png" alt=""></a> 
+                    <a href="index.html"><img class="w-30" src="images/LOGO-BIG1.png" alt=""></a> 
                     <p>Over 21 years of experience we’ll ensure you always get the best guidance. </p>
                     <h4>CUSTOMER SATISFACTION</h4>
                     <span class="persent">100%</span>
-                    <a href="#contact.html" class="contact_btn"><i class="fa fa-arrow-right"></i>Contact us</a>
+                    <a href="#" class="contact_btn"><i class="fa fa-arrow-right"></i>Contact us</a>
                     <ul class="footer_social"> 
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -265,37 +233,34 @@
                     </ul>
                 </div>
                 <div class="footer_widget col-lg-3 col-sm-6 wow fadeIn" data-wow-delay="0.3s">
-                    <h4>Company</h4>
+                    <h4>GSC</h4>
                     <ul class="footer_nav">  
-                        <li><a href="#">Factory</a></li> 
-                        <li><a href="#">Site Map</a></li> 
-                        <li><a href="#">Accessibility</a></li> 
-                        <li><a href="#">Company</a></li> 
-                        <li><a href="#">About</a></li> 
-                        <li><a href="#">Approach</a></li> 
+                        <li><a href="#">Home</a></li> 
+                        <li><a href="#">About Us</a></li> 
+                        <li><a href="#">Contact us</a></li> 
                     </ul>
                 </div>  
                 <div class="footer_widget fw_2 col-lg-2 col-sm-6 wow fadeIn" data-wow-delay="0.6s">
-                    <h4>Solutions</h4> 
+                    <h4>Products</h4> 
                     <ul class="footer_nav"> 
-                        <li><a href="#">Electronic Materials</a></li>   
-                        <li><a href="#">Gifts & Apparel</a></li>   
-                        <li><a href="#">Auto Parts </a></li>   
-                        <li><a href="#">Heavy Equipment</a></li>   
-                        <li><a href="#">Machine Tool</a></li>   
+                        <li><a href="#">Detergents</a></li>   
+                        <li><a href="#">Solvents</a></li>   
+                        <li><a href="#">Thinners </a></li>   
+                        <li><a href="#">Special Detergents</a></li>   
+                        <li><a href="#">Oilfield Chemicals</a></li>   
                         <li><a href="#">Marine</a></li>   
                     </ul>
                 </div> 
                 <div class="footer_widget fw_3 col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.9s">
-                    <h4> Our Services</h4>  
+                    <h4> Detergents</h4>  
                     <ul class="footer_nav">     
-                        <li><a href="#">Mechanical Engineering</a></li>   
-                        <li><a href="#">Industrial Construction</a></li>   
-                        <li><a href="#">Bridge Construction</a></li>   
+                        <li><a href="#">Industrial Detergents</a></li>   
+                        <li><a href="#">Household Detergents</a></li>   
+                        <!-- <li><a href="#">Bridge Construction</a></li>   
                         <li><a href="#">Oil & Gas Energy</a></li>   
                         <li><a href="#">Auto Parts</a></li>   
                         <li><a href="#">Power Systems</a></li>   
-                        <li><a href="#">Building Management</a></li>   
+                        <li><a href="#">Building Management</a></li>    -->
                     </ul>
                 </div>  
             </div>
