--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
         <div class="container"> 
             <div class="footer_inner row"> 
                 <div class="col-lg-4 col-md-6 footer_logo wow fadeIn">
-                    <a href="index.html"><img class="w-25" src="images/GSC.png" alt=""></a> 
+                    <a href="index.html"><img class="w-30" src="images/LOGO-BIG1.png" alt=""></a> 
                     <p>Over 21 years of experience we’ll ensure you always get the best guidance. </p>
                     <h4>CUSTOMER SATISFACTION</h4>
                     <span class="persent">100%</span>
