--- a/industries-2.html
+++ b/industries-2.html
@@ -264,7 +264,7 @@
         <div class="container"> 
             <div class="footer_inner row"> 
                 <div class="col-lg-4 col-md-6 footer_logo wow fadeIn">
-                    <a href="index.html"><img class="w-25" src="images/GSC.png" alt=""></a> 
+                    <a href="index.html"><img class="w-30" src="images/LOGO-BIG1.png" alt=""></a> 
                     <p>Over 21 years of experience we’ll ensure you always get the best guidance. </p>
                     <h4>CUSTOMER SATISFACTION</h4>
                     <span class="persent">100%</span>
@@ -288,6 +288,7 @@
                 <div class="footer_widget fw_2 col-lg-2 col-sm-6 wow fadeIn" data-wow-delay="0.6s">
                     <h4>Products</h4> 
                     <ul class="footer_nav"> 
+                        <li><a href="#">Detergents</a></li>   
                         <li><a href="#">Solvents</a></li>   
                         <li><a href="#">Thinners </a></li>   
                         <li><a href="#">Special Detergents</a></li>   
@@ -296,7 +297,7 @@
                     </ul>
                 </div> 
                 <div class="footer_widget fw_3 col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.9s">
-                    <h4>Our Detergents</h4>  
+                    <h4> Detergents</h4>  
                     <ul class="footer_nav">     
                         <li><a href="#">Industrial Detergents</a></li>   
                         <li><a href="#">Household Detergents</a></li>   
