--- a/industries-2.html
+++ b/industries-2.html
@@ -51,7 +51,7 @@
     <div class="header_logo_area"> 
         <div class="container">  
             <div class="header_logo_inner row">
-                <div class="col-lg-3"><a class="navbar-brand" href="index.html"><img src="images/GSC.png" alt=""></a></div>
+                <div class="col-lg-3"><a class="navbar-brand" href="index.html"><img class="w-50" src="images/GSC.png" alt=""></a></div>
                 <div class="right_info col-lg-9 row"> 
                     <div class="media col-md-4 col-sm-6 align-items-center">
                         <i class="flaticon-placeholder"></i>
@@ -235,6 +235,78 @@
                         <div class="fetures">
                             <h3 class="heding">Madiera Oud Air Freshener</h3>
                             <p>Madiera Oud Air Freshener brings the rich and luxurious scent of oud into your home, creating a warm and inviting atmosphere. Its long-lasting fragrance fills the room with a deep, woody aroma that elevates any space.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="0.9s">
+                    <div class="factories">
+                        <div class="factories_img pb-5">
+                            <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants7.jpg" alt="">
+                            <h3 class="heding">Handy Liquid Hand Soap</h3>
+                        </div>
+                        <div class="fetures">
+                            <h3 class="heding">Handy Liquid Hand Soap</h3>
+                            <p>Handy offers a gentle yet effective cleansing experience, leaving hands clean and moisturized with every use. Its easy-to-use pump dispenser provides convenient access, making it perfect for both home and office settings. Enjoy soft, refreshed hands with Handy’s rich, nourishing formula.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="0.9s">
+                    <div class="factories">
+                        <div class="factories_img pb-5">
+                            <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants8.jpg" alt="">
+                            <h3 class="heding">Nove Dishwashing Liquid</h3>
+                        </div>
+                        <div class="fetures">
+                            <h3 class="heding">Nove Dishwashing Liquid</h3>
+                            <p>Nove Dishwashing Liquid provides powerful grease-cutting action, leaving your dishes sparkling clean and residue-free. Its gentle formula is tough on stains but mild on hands, making it ideal for everyday use. With a fresh scent and long-lasting foam, Nove ensures a pleasant and effective dishwashing experience.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="0.9s">
+                    <div class="factories">
+                        <div class="factories_img pb-5">
+                            <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants9.jpg" alt="">
+                            <h3 class="heding">Acacia Peach Air Freshener</h3>
+                        </div>
+                        <div class="fetures">
+                            <h3 class="heding">Acacia Peach Air Freshener</h3>
+                            <p>Indulge in the sweet, juicy scent of ripe peaches with Acacia Peach Air Freshener. Its fruity fragrance instantly revitalizes your surroundings, leaving behind a refreshing and invigorating scent..</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="0.9s">
+                    <div class="factories">
+                        <div class="factories_img pb-5">
+                            <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants10.jpg" alt="">
+                            <h3 class="heding">Acacia Cranberry Air Freshener</h3>
+                        </div>
+                        <div class="fetures">
+                            <h3 class="heding">Acacia Cranberry Air Freshener</h3>
+                            <p>Enjoy the crisp and refreshing scent of cranberries with Acacia Cranberry Air Freshener. This fruity fragrance leaves a fresh, uplifting vibe, perfect for brightening up any room in your home or office.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="0.9s">
+                    <div class="factories">
+                        <div class="factories_img pb-5">
+                            <img src="images/a.png" alt="">
+                            <h3 class="heding">Coming Soon</h3>
+                        </div>
+                        <div class="fetures">
+                            <h3 class="heding">Coming Soon</h3>
+                            <p>Coming Soon</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="0.9s">
+                    <div class="factories">
+                        <div class="factories_img pb-5">
+                            <img src="images/a.png" alt="">
+                            <h3 class="heding">Coming Soon</h3>
+                        </div>
+                        <div class="fetures">
+                            <h3 class="heding">Coming Soon</h3>
+                            <p>Coming Soon</p>
                         </div>
                     </div>
                 </div>
