--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="header_logo_area"> 
         <div class="container">  
             <div class="header_logo_inner row">
-                <div class="col-lg-3"><a class="navbar-brand" href="index.html"><img src="images/GSC.png" alt=""></a></div>
+                <div class="col-lg-3"><a class="navbar-brand" href="index.html"><img class="w-50" src="images/GSC.png" alt=""></a></div>
                 <div class="right_info col-lg-9 row"> 
                     <div class="media col-md-4 col-sm-6 align-items-center">
                         <i class="flaticon-placeholder"></i>
@@ -483,7 +483,7 @@
                         <img  class="w-25" src="images/industry-alt.svg" alt="">
                         <a href="industries-2.html" class="heding">Industrial Detergents</a>
                         <p>Heavy-duty cleaning solutions for industrial environments, designed to remove grease and dirt from machinery and equipment.</p>
-                        <a href="industries-2.html">Go Continues <i class="fa fa-arrow-right"></i></a>
+                        <a href="industries-2.html">More Details <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <!-- Fetures -->
@@ -492,7 +492,7 @@
                         <img class="w-25" src="images/2.svg" alt="">
                         <a href="industries-2.html" class="heding">Home Detergents</a>
                         <p>Our eco-friendly detergents provide powerful, safe cleaning for every corner of your home, ensuring hygiene and protecting your family.</p>
-                        <a href="industries-2.html">Go Continues <i class="fa fa-arrow-right"></i></a>
+                        <a href="industries-2.html">More Details <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <!-- Fetures -->
@@ -501,7 +501,7 @@
                         <img class="w-25" src="images/flask.svg" alt="">
                         <a href="industries-single.html" class="heding">Mixed Solvents  </a>
                         <p>Custom-blended solvents tailored for industrial applications like coatings, adhesives, and printing, ensuring efficiency and versatility.</p>
-                        <a href="industries-single.html">Go Continues <i class="fa fa-arrow-right"></i></a>
+                        <a href="industries-single.html">More Details <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <!-- Fetures -->
@@ -510,7 +510,7 @@
                         <img class="w-30" src="images/6.svg" alt="">
                         <a href="industries-single.html" class="heding">Pure Solvents </a>
                         <p>High-purity chemical solvents for specialized industries such as pharmaceuticals and electronics, offering precise performance.</p>
-                        <a href="industries-single.html">Go Continues <i class="fa fa-arrow-right"></i></a>
+                        <a href="industries-single.html">More Details <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="1.1s">
@@ -518,7 +518,7 @@
                         <img class="w-25" src="images/3.svg" alt="">
                         <a href="industries-single.html" class="heding">Thinners</a>
                         <p>Formulated to reduce the viscosity of paints and coatings, our thinners ensure smooth application and consistent results.</p>
-                        <a href="industries-single.html">Go Continues <i class="fa fa-arrow-right"></i></a>
+                        <a href="industries-single.html">More Details <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="0.9s">
@@ -526,7 +526,7 @@
                         <img class="w-25" src="images/6.svg" alt="">
                         <a href="industries-single.html" class="heding">Special Detergents</a>
                         <p>Tailor-made detergents designed to meet specific industrial cleaning needs, developed in collaboration with our clients.</p>
-                        <a href="industries-single.html">Go Continues <i class="fa fa-arrow-right"></i></a>
+                        <a href="industries-single.html">More Details <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <!-- Fetures -->
