--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             <li class="dropdown">
                                 <a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown" aria-expanded="false">Products<i class="fa fa-caret-down"></i></a>
                                 <ul class="dropdown-menu">
-                                    <li class="dropdown"><a class="dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">Detergents</a>
+                                    <li class="dropdown"><a class="dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Detergents</a>
                                         <ul class="dropdown-menu">
                                             <li><a class="dropdown-item" href="#">Industrial Detergents</a></li>
                                             <li><a class="dropdown-item" href="industries-2.html">Household Detergents</a></li>
@@ -641,21 +641,8 @@
                 </div>  
             </div>
              <!-- Copy Right -->
-            <div class="copy_right row"> 
-                <div class="col-lg-8">
-                   <div class="receive_email"> 
-                        <h4>Receive news right on your email</h4>
-                        <div class="email_from"> 
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Your email">
-                                <div class="input-group-append">
-                                    <span class="input-group-text theme_btn"><i class="fa fa-paper-plane"></i></span>
-                                </div>
-                            </div>
-                        </div>
-                   </div>
-                </div>
-                <p class="col-lg-4 order-lg-first">Copyright 2018, All Right Reserved</p> 
+            <div class="copy_right row "> 
+                <p class="col order-lg-first">Copyright 2018, All Right Reserved</p> 
             </div>
         </div> 
     </footer>
